change project structure

--- a/html/cartPage.html
+++ b/html/cartPage.html
@@ -31,42 +31,7 @@
         <div class="row g-5">
             <div class="col-md-7 col-lg-6 order-md-last">
                 <h2 class="mb-3">Hàng của bạn</h2>
-                <ul id="cart-products" class="list-group mb-3 list-unstyled">
-                    <li class="mb-2">
-                        <div class="cart-product">
-                            <div class="cart-product__img-wrapper">
-                                <img src="//cdn.becungshop.vn/images/500x500/bo-thun-genax-va-quan-tui-kieu-cho-be-trai-p260788e85dc26-500x500.jpg" alt="">
-                            </div>
-                            <div class="cart-product__content">
-                                <div class="cart-product__name">
-                                    Bộ thun Genax và quần túi kiểu cho bé trai
-                                </div>
-                                <div class="cart-product__price">Đơn giá: 159,000đ</div>
-                                <div class="cart-product__quantity">Số lượng: 3</div>
-                            </div>
-                        </div>
-                    </li>
-                    
-                    <li class="mb-2">
-                        <div class="cart-product">
-                            <div class="cart-product__img-wrapper">
-                                <img src="//cdn.becungshop.vn/images/500x500/set-do-dui-ca-tinh-danh-cho-be-gai-p26147fe985d6c-500x500.jpg" alt="">
-                            </div>
-                            <div class="cart-product__content">
-                                <div class="cart-product__name">
-                                    Sét đồ đũi cá tính dành cho bé gái
-                                </div>
-                                <div class="cart-product__price">Đơn giá: 169,000đ</div>
-                                <div class="cart-product__quantity">Số lượng: 2</div>
-                            </div>
-                        </div>
-                    </li>
-                    
-                    <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (VND)</span>
-                        <strong>2,114,000đ</strong>
-                    </li>
-                </ul>
+                <ul id="cart-products" class="list-group mb-3 list-unstyled"></ul>
 
             <form class="card p-2">
                 <div class="input-group">
