--- a/html/footer.html
+++ b/html/footer.html
@@ -56,7 +56,7 @@
                         <h4>BAM</h4>
                         <ul class="nav flex-column">
                             <li class="nav-item mb-2">
-                                <a href="./index.html" class="nav-link p-0 text-muted"
+                                <a href="../index.html" class="nav-link p-0 text-muted"
                                     >Trang chủ</a
                                 >
                             </li>
