--- a/html/header.html
+++ b/html/header.html
@@ -36,11 +36,11 @@
         </div>
         <div class="header__container">
             <div class="header__container__logo-nav d-flex justify-content-between align-items-center">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="../asset/image/logo-2.png" alt="logo" class="logo">
                 </a>
                 <nav class="nav">
-                    <a href="./index.html" class="nav-item">Trang chủ</a>
+                    <a href="../index.html" class="nav-item">Trang chủ</a>
                     <a href="./productPage.html" class="nav-item">Sản phẩm</a>
                     <a href="./contactPage.html" class="nav-item">Liên hệ</a>
                 </nav>
